                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 06-07-2006 changed: combined gui and video calibration, 
              added: new gui setting skin zoom and new skin.xml setting, to allow for overscan adjustment of skin.
              removed: osd location adjustment, now only follows what's been set in skin
 - 05-07-2006 changed: directory labels in file manager now show 'root' instead of being blank in the root listing.
 - 05-07-2006 fixed: !Skin.String(name) conditional wasn't functioning (the ! was ignored)
 - 05-07-2006 fixed: Initial control visibility and dialog control visibility were cached incorrectly.
 - 04-07-2006 changed: Skin reload no longer stops the currently playing media.
 - 04-07-2006 fixed: 'add source button' didn't appear on empty bookmark listing in my programs.
 - 04-07-2006 added: Support for UPnP Media Servers auto-discovery. No need to specify IP address of host in sources.xml. No need to use the SsdpProxy program anymore.
 - 04-07-2006 changed: Network Setup now uses UPnP auto-discovery.
 - 04-07-2006 changed: Speed improvements on all skin setting retrieval.  Removed not completely working Skin.CompareString() and replaced with Skin.String(name,value) to do comparisons.  Also extended Skin.SetBool(name,value) to take true or false as a parameter.
 - 03-07-2006 fixed: Video & Picture titles for UPnP is now displaying actual text
 - 03-07-2006 fixed: Compiler settings for debug lipPlatinumd was wrong causing crashes in debug build with debug libs
 - 03-07-2006 fixed: some quicktime external dll's where broken since 26-06-2006
 - 03-07-2006 changed: made loadlibrary return base address of dll instead of pointer to xbmc dllloader structure.